cluster/core/storage/longhorn/longhorn-ingressroute.yaml
# longhorn-local-ingressroute
# longhorn-http-ingressroute
# longhorn-https-ingressroute

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: longhorn-local-ingressroute
#   namespace: longhorn-system
# spec:
#   entryPoints:
#     - web
#   routes:
#     - match: Host(`longhorn.${SECRET_DOMAIN_LOCAL_02}`)
#       kind: Rule
#       services:
#         - name: longhorn-frontend
#           port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-http-ingressroute
  namespace: longhorn-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`longhorn.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: https-redirect-scheme-middleware
          namespace: traefik
      services:
        - name: longhorn-frontend
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-https-ingressroute
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: basicauth-middleware
          namespace: traefik
        # - name: authelia-middleware
        #   namespace: authentication
        - name: secure-headers-middleware
          namespace: traefik
        - name: longhorn-headers-middleware # avoid CORS problem
          namespace: longhorn-system
      services:
        - name: longhorn-frontend
          namespace: longhorn-system
          port: 80
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    options:
      name: default-tlsoption
      namespace: traefik
